# NienLuanCNTT

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  build.gradle.kts  clang-format.sh  requirements.txt  settings.gradle.kts  test_moonshine.py
android/java/androidTest/assets/tiny-en/: decoder_model_merged.ort  encoder_model.ort
android/java/androidTest/java/ai/moonshine/voice/: JNITest.java  NoTranscriptionTest.java  TranscriberTest.java  Utils.java
android/java/main/java/ai/moonshine/voice/: JNI.java  MicCaptureProcessor.java  MicTranscriber.java  Transcriber.java  TranscriberOption.java  Transcript.java  TranscriptEvent.java  TranscriptEventListener.java  TranscriptLine.java
android/java/test/java/ai/moonshine/voice/: ExampleUnitTest.java
android/moonshine-jni/: CMakeLists.txt  moonshine-jni.cpp
core/: CMakeLists.txt  benchmark.cpp  cosine-distance-test.cpp  cosine-distance.cpp  cosine-distance.h  embedding-model.h  gemma-embedding-model-test.cpp  gemma-embedding-model.cpp  gemma-embedding-model.h  intent-recognizer-test.cpp  intent-recognizer.cpp  intent-recognizer.h  module.modulemap  moonshine-c-api-test.cpp  moonshine-c-api.cpp  moonshine-c-api.h  moonshine-cpp-test.cpp  moonshine-cpp.h  moonshine-model.cpp  moonshine-model.h  moonshine-streaming-model.cpp  moonshine-streaming-model.h  online-clusterer-test.cpp  online-clusterer.cpp  online-clusterer.h  resampler-test.cpp  resampler.cpp  resampler.h  silero-vad.cpp  silero-vad.h  speaker-embedding-model-data.cpp  speaker-embedding-model-data.h  speaker-embedding-model-test.cpp  speaker-embedding-model.cpp  speaker-embedding-model.h  transcriber-test.cpp  transcriber.cpp  transcriber.h  voice-activity-detector-test.cpp  voice-activity-detector.cpp  (+1 more)
core/bin-tokenizer/: CMakeLists.txt  bin-tokenizer-test.cpp  bin-tokenizer.cpp  bin-tokenizer.h
core/moonshine-utils/: CMakeLists.txt  debug-utils-test.cpp  debug-utils.cpp  debug-utils.h  string-utils-test.cpp  string-utils.cpp  string-utils.h  test-utils.h
core/ort-utils/: CMakeLists.txt  moonshine-ort-allocator.cpp  moonshine-ort-allocator.h  moonshine-tensor-view.cpp  moonshine-tensor-view.h  moonshine-tensor.cpp  moonshine-tensor.h  ort-utils-test.cpp  ort-utils.cpp  ort-utils.h
examples/android/Transcriber/: settings.gradle.kts
examples/android/Transcriber/app/: build.gradle.kts
examples/android/Transcriber/app/src/androidTest/java/ai/moonshine/androidtranscriber/: ExampleInstrumentedTest.java
examples/android/Transcriber/app/src/main/: AndroidManifest.xml
examples/android/Transcriber/app/src/main/res/drawable/: icon_mic.xml
examples/android/Transcriber/app/src/main/res/layout/: activity_main.xml  content_main.xml  item_text_line.xml
examples/android/Transcriber/app/src/main/res/menu/: menu_main.xml
examples/android/Transcriber/app/src/main/res/navigation/: nav_graph.xml
examples/android/Transcriber/app/src/main/res/values/: strings.xml  themes.xml
examples/android/Transcriber/app/src/main/res/values-night/: themes.xml
examples/android/Transcriber/app/src/main/res/values-v23/: themes.xml
examples/android/Transcriber/gradle/: libs.versions.toml
examples/android/Transcriber/gradle/wrapper/: gradle-wrapper.properties
examples/c++/: README.md  transcriber.cpp
examples/ios/Transcriber/Transcriber/: ContentView.swift  TranscriberApp.swift
examples/ios/Transcriber/Transcriber.xcodeproj/: project.pbxproj
examples/ios/Transcriber/TranscriberTests/: TranscriberTests.swift
examples/ios/Transcriber/TranscriberUITests/: TranscriberUITests.swift  TranscriberUITestsLaunchTests.swift
examples/ios/Transcriber/models/base-en/: decoder_model_merged.ort  encoder_model.ort
examples/macos/BasicTranscription/: Package.swift  README.md  project.yml
examples/macos/BasicTranscription/BasicTranscription.xcodeproj/: project.pbxproj
examples/macos/BasicTranscription/BasicTranscription.xcodeproj/xcshareddata/xcschemes/: BasicTranscription.xcscheme
examples/macos/BasicTranscription/Sources/BasicTranscription/: main.swift
examples/macos/MicTranscription/: Package.swift  README.md  project.yml
examples/macos/MicTranscription/MicTranscription.xcodeproj/: project.pbxproj
examples/macos/MicTranscription/MicTranscription.xcodeproj/xcshareddata/xcschemes/: BasicTranscription.xcscheme
examples/macos/MicTranscription/Sources/MicTranscription/: main.swift
examples/python/: basic_transcription.py  intent_recognition.py  mic_transcription.py
examples/raspberry-pi/my-dalek/: README.md  my-dalek.py
examples/windows/cli-transcriber/: README.md  cli-transcriber.cpp  cli-transcriber.sln  cli-transcriber.vcxproj  download-lib.bat
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
moonshine_env/Scripts/: activate  activate.bat
python/: MANIFEST.in  README.md  build-requirements.txt  getting-started-with-moonshine-voice.ipynb  pyproject.toml  setup.py
python/src/moonshine_voice/: __init__.py  download.py  download_file.py  errors.py  intent_recognizer.py  mic_transcriber.py  moonshine_api.py  requirements.txt  transcriber.py  utils.py
scripts/: build-all-platforms.sh  build-pip-docker.sh  build-pip.bat  build-pip.sh  build-swift.sh  convert_tokenizer.py  eval-model-accuracy.py  eval-speaker-id.py  publish-android.sh  publish-binary.bat  publish-binary.sh  publish-swift.sh  quantize-streaming-model.sh  run-benchmarks.py  run-core-tests.bat  run-core-tests.sh  update-version.sh
static/: main.js  style.css
swift/: .gitignore  Package.swift  Package.swift.remote  README.md
swift/Sources/MoonshineVoice/: Errors.swift  Events.swift  MicTranscriber.swift  ModelArch.swift  MoonshineAPI.swift  Stream.swift  Transcriber.swift  Transcript.swift  TranscriptEventListener.swift  WAVLoader.swift
swift/Tests/MoonshineVoiceTests/: TranscriberTests.swift
templates/: index.html
test-assets/: speaker-embedding-model.ort
test-assets/tiny-en/: decoder_model_merged.ort  encoder_model.ort
test-assets/tiny-streaming-en/: adapter.ort  cross_kv.ort  decoder_kv.ort  encoder.ort  frontend.ort  streaming_config.json
(+3 files in other folders)
